<resources>
    <string name="app_name">Reformes Pujol</string>
    <string name="actualitzar">Actualitzar</string>
    <string name="todo1">TODO</string>
    <string name="parcela">Parcela :</string>
    <string name="camping">Camping</string>
    <string name="campingPres">Camping :</string>
    <string name="nomPres">Nom</string>
    <string name="nomPressupost">Nom :</string>
    <string name="dataPress">Data</string>
    <string name="dataPressupost">Data :</string>
    <string name="total">Total</string>
    <string name="cantitat">Cantitat</string>
    <string name="concepte">Concepte</string>
    <string name="parcelaPress">Parcela</string>
    <string name="_605847675">605847675</string>
    <string name="_695010028">695010028</string>
    <string name="edu">Edu</string>
    <string name="rai">Rai</string>
    <string name="pujol">Pujol</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="importPress">Import</string>
    <string name="iva_21">IVA 21%</string>
    <string name="totaltotal">Total</string>
    <string name="guardar_pressupost">Guardar pressupost</string>
    <string name="apuntar_material">Apuntar material…</string>
    <string name="guardar_imatge">guardar_imatge</string>
    <string name="compartir_imatge">compartirimatge</string>
    <string name="todo87">TODO87</string>
    <string name="reformes_pujol">Reformes Pujol</string>
    <string name="guardar">Guardar</string>
    <string name="actualitzarPre">Actualitzar</string>
    <string name="guardarpress">Guardar</string>
    <string name="actualitzarClient">actualitzarClient</string>
    <string name="euros">€</string>
    <string name="feina">Feina</string>
    <string name="acceptar">Acceptar</string>
    <string name="nom">Nom</string>
    <string name="preu">Preu</string>
    <string name="Telefon">Telefon</string>
    <string name="pis">PiS</string>
    <string name="veurepressupost">veurePressupost</string>
    <string name="veurefeina">veureFeina</string>
    <string name="tlf">Tlf :</string>
    <string name="feines_a_fer">Feines a fer</string>
    <string name="feines">Feines</string>
    <string name="feines_acabades">Feines acabades</string>
    <string name="feina_a_fer">Feina a fer</string>
    <string name="feina_feta">Feina feta</string>
    <string name="escriure_text_aqui">Escriure text aqui</string>
    <string name="pressupostos_pendents">Pressupostos pendents...</string>
    <string name="pressupostos">Pressupostos</string>

</resources>