<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemFP"
    android:layout_width="match_parent"
    android:layout_height="100sp"
    android:padding="1dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardvfp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvcampinga"
            android:layout_width="220sp"
            android:layout_height="30sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:shadowColor="#818181"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:text="@string/camping"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvnoma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="60sp"
            android:shadowColor="#818181"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:text="@string/nomPres"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tipofeina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="60sp"
            android:layout_marginEnd="20sp"
            android:shadowColor="#818181"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:text="@string/feina"
            android:textAlignment="textEnd"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvpreu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="30sp"
            android:shadowColor="#818181"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:text="@string/preu"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tveurofp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:text="@string/euros"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
