<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/nourectimagepre"
        android:layout_width="300sp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="#DDFFFFFF"
        android:contentDescription="@string/todo4"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toTopOf="@+id/noucardpres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/noulogoempresa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/nourectimagepre"
        app:layout_constraintEnd_toEndOf="@+id/nourectimagepre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/noutvNRai"
        app:layout_constraintTop_toTopOf="@+id/nourectimagepre"
        app:srcCompat="@drawable/reformespujol" />

    <TextView
        android:id="@+id/nounomEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/reformes_pujol"
        android:textColor="#040404"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/nourectimagepre"
        app:layout_constraintTop_toTopOf="@+id/nourectimagepre" />

    <TextView
        android:id="@+id/noutvRai"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/rai"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/nourectimagepre"
        app:layout_constraintTop_toBottomOf="@+id/nounomEmpresa" />

    <TextView
        android:id="@+id/noutvEdu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/edu"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/nourectimagepre"
        app:layout_constraintStart_toStartOf="@+id/nourectimagepre"
        app:layout_constraintTop_toBottomOf="@+id/noutvRai"
        app:layout_constraintVertical_bias="0.272" />

    <TextView
        android:id="@+id/noutvNRai"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/_695010028"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/noutvRai"
        app:layout_constraintTop_toBottomOf="@+id/nounomEmpresa" />

    <TextView
        android:id="@+id/noutvNEdu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/_605847675"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/noutvEdu"
        app:layout_constraintTop_toBottomOf="@+id/noutvNRai" />

    <androidx.cardview.widget.CardView
        android:id="@+id/noucardpres"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10sp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nourectimagepre">

        <TextView
            android:id="@+id/noutvData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginStart="15sp"
            android:layout_marginTop="15sp"
            android:text="@string/dataPressupost"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nouetData"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginStart="57sp"
            android:layout_marginTop="15sp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="phone"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/noutvNomC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="100sp"
            android:text="@string/nomPressupost"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nouetNomP"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="10sp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="textMultiLine|textPersonName"
            android:maxLength="20"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/noutvCampingP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginStart="15sp"
            android:layout_marginBottom="15sp"
            android:text="@string/campingPres"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nouetCampingP"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginStart="85sp"
            android:layout_marginBottom="15sp"
            android:background="@android:color/transparent"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz0123456789"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/noutvtelefonpre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="100sp"
            android:layout_marginBottom="15sp"
            android:text="@string/tlf"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nouettlfpre"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="15sp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="phone"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/noubtGuardar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/botorodo"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/guardar"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nouconceptepreupre" />

    <androidx.cardview.widget.CardView
        android:id="@+id/noubarraconcepte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="1dp"
        app:cardBackgroundColor="#7CBAB9B9"
        app:cardCornerRadius="20sp"
        app:cardElevation="10sp"
        app:layout_constraintBottom_toTopOf="@+id/nouconceptetextpre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noucardpres">

        <TextView
            android:id="@+id/nouConceptepre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10sp"
            android:text="@string/concepte"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/noutotaltextpre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="40sp"
            android:text="@string/total"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nouconceptetextpre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="1dp"
        app:cardCornerRadius="20sp"
        app:cardElevation="10sp"
        app:layout_constraintBottom_toTopOf="@+id/nouconceptepreupre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noubarraconcepte">

        <androidx.cardview.widget.CardView
            android:id="@+id/nouconceptepreus"
            android:layout_width="90sp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            app:cardBackgroundColor="#FFFFFF">

            <EditText
                android:id="@+id/nouetnumerospre"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="center_horizontal|top"
                android:inputType="textMultiLine"
                android:textSize="14sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/nouetConceptepre"
            android:layout_width="280sp"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:textSize="14sp"
            android:textStyle="normal" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nouconceptepreupre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="#7CBAB9B9"
        app:cardCornerRadius="20sp"
        app:cardElevation="10sp"
        app:layout_constraintBottom_toTopOf="@+id/noubtGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nouconceptetextpre">

        <TextView
            android:id="@+id/nouiva21pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10sp"
            android:text="@string/iva_21" />

        <EditText
            android:id="@+id/nouetTotalIvapre"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="65sp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="end"
            android:inputType="phone"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/noutveuropre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="125sp"
            android:text="@string/euros" />

        <TextView
            android:id="@+id/noutveuroupre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="10sp"
            android:text="@string/euros" />

        <EditText
            android:id="@+id/nouetTotalpre"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="20sp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:inputType="phone"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>