<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".agregarNouClient">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:theme = "@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvcampinga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:shadowColor="#838383"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/camping"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvnoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:shadowColor="#838383"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/nom"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvcampinga" />

    <TextView
        android:id="@+id/tvtelefon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:shadowColor="#838383"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/Telefon"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvnoma" />

    <TextView
        android:id="@+id/tvpreua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:shadowColor="#838383"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/preu"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtelefon" />

    <EditText
        android:id="@+id/etcamping"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:hint="@string/camping"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tvcampinga"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etnom"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nom"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tvnoma"
        app:layout_constraintTop_toBottomOf="@+id/etcamping" />

    <EditText
        android:id="@+id/etpreu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/preu"
        android:inputType="number"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/tvpreua"
        app:layout_constraintTop_toBottomOf="@+id/ettelefon" />

    <Button
        android:id="@+id/btFeinaAcabada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/feina_feta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etfeina" />

    <Button
        android:id="@+id/btFeinaPerFer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="50dp"
        android:text="@string/feina_a_fer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etfeina" />

    <TextView
        android:id="@+id/tvfeina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:shadowColor="#838383"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/feina"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvparciala" />

    <EditText
        android:id="@+id/etfeina"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/feina"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tvfeina"
        app:layout_constraintTop_toBottomOf="@+id/etparciala" />

    <EditText
        android:id="@+id/ettelefon"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Telefon"
        android:inputType="phone"
        app:layout_constraintStart_toEndOf="@+id/tvtelefon"
        app:layout_constraintTop_toBottomOf="@+id/etnom" />

    <TextView
        android:id="@+id/tvparciala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/pis"
        android:shadowColor="#838383"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvpreua" />

    <EditText
        android:id="@+id/etparciala"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/pis"
        android:inputType="phone"
        app:layout_constraintStart_toEndOf="@+id/tvparciala"
        app:layout_constraintTop_toBottomOf="@+id/etpreu"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>